Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-deployment
  labels:
    app: django-app
    
spec:
  replicas: 6
  selector:
    matchLabels:
      app: django-app
  template:
     metadata:
      labels:
        app: django-app
     spec:
      containers:
      - name: django-todo-ctr
        image: trainwithshubham/django-todo:latest
        ports:
          - containerPort: 8000
